20230817 스프링 시큐리티 기본 설치 및 config 설정

--- a/springsecurity/springsecurity6/build.gradle
+++ b/springsecurity/springsecurity6/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	
-	// spring security
+	// spring security basic
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
